# Viterbi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
apps/: CMakeLists.txt  viterbi-run.cpp
cmake/: ViterbiConfig.cmake.in
cmake/cmake-tools/: README.md  build.sh  cmake_uninstall.cmake.in  gitTools.cmake  projectTools.cmake  superbuildTools.cmake
include/Viterbi/easylogging++/: easylogging++.hpp
include/Viterbi/optionsParser/: optionsParser.hpp
include/Viterbi/useful/: matrix.hpp  matrix.tpp  text_proc.hpp  text_proc_parser.hpp  various.hpp
include/Viterbi/viterbi/: translation_table.hpp  utterance.hpp  viterbi.hpp  vocabulary.hpp
src/: CMakeLists.txt
src/dox/: CMakeLists.txt  Doxyfile  main.dox
src/easylogging++/: CMakeLists.txt  easylogging++.cpp
src/optionsParser/: CMakeLists.txt  optionsParser.cpp
src/useful/: CMakeLists.txt  text_proc_parser.cpp  various.cpp
src/viterbi/: CMakeLists.txt  translation_table.cpp  utterance.cpp  viterbi.cpp  vocabulary.cpp
test/data/: europarl.en.srilm  trans0-0.txt
